# idb-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: config.cmake  dependencies.cmake  unset_conf.cmake
include/: idb.hpp  idb.ipp
src/: .idb.cpp.swp  CMakeLists.txt  idb.cpp  main.cpp
test/: CMakeLists.txt
